update way of finding shorts section

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,7 +22,8 @@
   },
   "permissions": [
     "scripting",
-    "webNavigation"
+    "webNavigation",
+    "storage"
   ],
   "host_permissions": [
     "*://*.youtube.com/*"
